[SPARK-53990] Use Java `(Map|Set).of` instead of `Collections.(empty|singleton)(Set|Map)`